@@ -1,3 +1,7 @@
+2010-05-26  Ingo Renner  <ingo@typo3.org>
+
+	* Added feature #14463: Add post initialization hook for tslib_cObj
+
 2010-05-26  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #14466: Bug: SpriteIconApi getSpriteIconForRecord does not find default icon (thanks to Steffen Ritter)
